added more line to the table

--- a/AssignmentProject2.html
+++ b/AssignmentProject2.html
@@ -71,6 +71,11 @@
                     <td><a href="#">Support</a></td>
                     <td><a href="#">Twitter</a></td>
                 </tr>
+                <tr>
+                    <td>practice</td>
+                    <td>training</td>
+                    <td>whatsapp</td>
+                </tr>
             </table>
          </footer>
     </body>
